--- a/index.html
+++ b/index.html
@@ -8,15 +8,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
-            <h1><span class="font-heighlit">Kamrul</span> Web Development</h1>
+            <h1><span class="orange-heighlit">Kamrul</span> Web Development</h1>
             <h3>World Class Web Developer</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br> an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <a class="link-button" target="_blank" href="facebook.com">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Area</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br> an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <a class="link-button" target="_blank" href="bdjobs.com">Download CV</a>
+
+        </div>
+    </section>
+    <section class="Experence">
+        <h2>Experences</h2>
+        <div id="full-stack" class="half-width experence">
+            <h2>Full Stack Web Dev</h2>
+            <h3 class="orange-heighlit">2021-Present | Pro Web Developer</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br> an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        </div>
+        <div id="baby-web" class="half-width experence">
+            <h2>Baby Developer</h2>
+            <h3 class="orange-heighlit"> 2020-2021 | Programming Hero Learner</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br> an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
     </section>
 </body>
