--- a/index.html
+++ b/index.html
@@ -33,16 +33,19 @@
     </section>
     <section class="Experence">
         <h2>Experences</h2>
-        <div id="full-stack" class="half-width experence">
+        <div id="full-stack" class="half-width single-experence">
             <h2>Full Stack Web Dev</h2>
             <h3 class="orange-heighlit">2021-Present | Pro Web Developer</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br> an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
-        <div id="baby-web" class="half-width experence">
+        <div id="baby-web" class="half-width single-experence">
             <h2>Baby Developer</h2>
             <h3 class="orange-heighlit"> 2020-2021 | Programming Hero Learner</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br> an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
     </section>
+    <footer>
+        <p>@All Right Reserved | Md Kamrul Islam</p>
+    </footer>
 </body>
 </html>
